test/test_bad/u.yang
module u {
  yang-version 1.1;
  namespace urn:u;
  prefix u;

  include usub; // error; bad version in submodule
  revision 2015-11-06;
  feature foo;
  feature bar;

  container a {
    if-feature "foo and not bar or foox"; // error: foox not defined
  }

  container b {
    if-feature "foo and not"; // error: bad syntax
  }

  container c {
    if-feature "foo and "; // error: bad syntax
  }

  action reset; // error: not allowed on top-level

  typedef id {
    type string {
      pattern '[a-zA-Z_][a-zA-Z0-9\-_.]*';
      pattern '[xX][mM][lL].*' {
        modifier invert-match;
      }
    }
  }

  leaf foo {
    type id;
    default "xMlu"; // error: bad pattern
  }

  leaf bar {
    type id;
    default "xmq-foo";
  }

  typedef rr {
    type enumeration {
      enum r {
        if-feature foo;
      }
    }
  }

  list l2 {
    key "id";
    leaf id {
      if-feature foo; // error: not legal in 1.1
      when f; // error: not legal in 1.1
      type int32;
    }
  }

  identity id1;
  identity id2;
  identity id3 {
    base id1;
    base idx; // error; doesn't exist
  }

  leaf-list ll {
    type uint32;
    default 1;
    default -2; // error; bad value
  }
  typedef fff {
    type uint32;
    default 42;
  }
  leaf-list lla { // error, restriction doesn't match default
    type fff {
      range "0..10";
    }
  }
  leaf-list llb {
    type uint32;
    default 1; // error; default and min-elements
    default 2;
    min-elements 2;
  }

}
